--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 # Site settings 配置站点
-title: 'your awesome title'
-description: 'your web description'
-keywords: 'your web keywords, another keywords'
-url: 'https://abc.github.io' # your host
+title: 'junr-1'
+description: '入门级安全研究员和数据分析人员'
+keywords: 'cyber security, Steady development！'
+url: 'https://github.com/boypengcom/boypengcom.github.io' # your host
 
 # nav 中文字符空格：&emsp;
 nav: # 最佳体验 六个标签 且最好每个标签不超过4中文字
@@ -14,21 +14,21 @@ nav: # 最佳体验 六个标签 且最好每个标签不超过4中文字
 
 # 博主
 author: true
-name: 'your awesome name'
-NickName: 'your awesome nickname'
-webtitle: 'your awesome webtitle'
+name: 'ID不重要'
+NickName: 'ID不重要'
+webtitle: 'Security research'
 bio: 'your awesome bio'
 about: true
-aboutyou: 'your introduction'
-portraits: '/assets/profile.jpeg' # your portraits image file path
+aboutyou: '工作在一家安全厂商'
+portraits: '/assets/profile.jpg' # your portraits image file path
 
 # SNS
 SNS: true
-SNS-icon: #['Facebook', 'weibo', 'qq', 'github', 'Dribbble', 'Twitter', 'instagram', 'weixin', 'Codepen']
-  mail: 'mailto:abc@gmail.com'
+SNS-icon: #['github']
+  mail: 'boypeng101@gmail.com'
   weixin: '' # 你的微信二维码存放的地址
   qq: '' # 你的qq二维码存放的地址 or http://wpa.qq.com/msgrd?v=3&uin='你的QQ号'&site=qq&menu=yes
-  github: ''
+  github: 'https://github.com/boypengcom'
   Codepen: ''
   weibo: ''
   instagram: ''
@@ -59,7 +59,7 @@ pygmentsTheme: 'default'
 
 # 友情链接
 friends:
-  jekyll: 'https://www.jekyll.com.cn/'
+  github: 'https://github.com/12306Bro/'
 
 # 评论 最佳体验 在disqus、livere和Gitment之间三选一
 # disqus 评论
