--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ author: true
 name: 'ID不重要'
 NickName: 'ID不重要'
 webtitle: 'Security research'
-bio: 'your awesome bio'
+bio: 'O.O'
 about: true
 aboutyou: '工作在一家安全厂商'
 portraits: '/assets/profile.jpg' # your portraits image file path
